src/test/ui/terminal-width/non-1-width-unicode-multiline-label.stderr
error[E0369]: cannot add `&str` to `&str`
  --> $DIR/non-1-width-unicode-multiline-label.rs:5:260
   |
LL | ...྅྆྇ྈྉྊྋྌྍྎྏྐྑྒྒྷྔྕྖྗ྘ྙྚྛྜྜྷྞྟྠྡྡྷྣྤྥྦྦྷྨྩྪྫྫྷྭྮྯྰྱྲླྴྵྶྷྸྐྵྺྻྼ྽྾྿࿀࿁࿂࿃࿄࿅࿆࿇࿈࿉࿊࿋࿌࿍࿎...࿒࿓࿔࿕࿖࿗࿘࿙࿚"; let _a = unicode_is_fun + " really fun!";
   |                                                 ---------------^ -------------- &str
   |                                                 |             ||
   |                                                 |             |`+` cannot be used to concatenate two `&str` strings
   |                                                 |             help: create an owned `String` from a string reference: `.to_owned()`
   |                                                 &str
   |
   = note: string concatenation requires an owned `String` on the left

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
